--- a/6.4 Motivation Meme Project/index.html
+++ b/6.4 Motivation Meme Project/index.html
@@ -1,26 +1,22 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <title>Motivational post website</title>
+    <title>Motivation Meme</title>
     <link rel="stylesheet" href="./style.css" />
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:ital,wght@0,400;0,700;1,400&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Libre+Baskerville&display=swap"
       rel="stylesheet"
     />
   </head>
+
   <body>
-    <div class="meme">
-      <img
-        class="image"
-        src="../6.4 Motivation Meme Project/assets/images/daenerys.jpeg"
-        alt="Motivational meme image"
-      />
-      <h1>That special moment</h1>
-      <p>when you find the perfect avocado at the market</p>
-      
+    <div class="poster">
+      <img class="motivation-img" src="./assets/images/daenerys.jpeg" />
+      <h1>That Special Moment</h1>
+      <p>When you find the perfect avocado at the supermarket</p>
     </div>
   </body>
 </html>
