--- a/6.4 Motivation Meme Project/solution/solution.html
+++ b/6.4 Motivation Meme Project/solution/solution.html
@@ -14,11 +14,7 @@
 
   <body>
     <div class="poster">
-      <img
-        class="motivation-img"
-        src="./assets/images/daenerys.jpeg"
-        src="daenerys with egg"
-      />
+      <img class="motivation-img" src="./assets/images/daenerys.jpeg" />
       <h1>That Special Moment</h1>
       <p>When you find the perfect avocado at the supermarket</p>
     </div>
